--- a/index.html
+++ b/index.html
@@ -99,12 +99,25 @@ will help me get a job
 				<span>Austin Morrell</span>
 			</div>
 			<div class="line">
-				<span>Software Developer</span>
+				<span>Software</span>
+			</div>
+			<div class="line">
+				<span>Developer</span>
 			</div>
 		</div>
 		<div class="align">
 			<form action="https://github.com/AustinMorrell">
 				<input type="image" src="github.png" />
+			</form>
+		</div>
+		<div class="align">
+			<form action="https://austinmorrell.github.io/Boids/">
+				<input type="image" src="Boid.png" />
+			</form>
+		</div>
+		<div class="align">
+			<form action="https://austinmorrell.github.io/Cloth/">
+				<input type="image" src="Cloth.png" />
 			</form>
 		</div>
 	</body>
