--- a/index.html
+++ b/index.html
@@ -110,11 +110,13 @@ will help me get a job
 				<input type="image" src="github.png" />
 			</form>
 		</div>
+		<h1>Boids</h1>
 		<div class="align">
 			<form action="https://austinmorrell.github.io/Boids/">
 				<input type="image" src="Boid.png" />
 			</form>
 		</div>
+		<h1>Cloth</h1>
 		<div class="align">
 			<form action="https://austinmorrell.github.io/Cloth/">
 				<input type="image" src="Cloth.png" />
