--- a/index.html
+++ b/index.html
@@ -122,5 +122,10 @@ will help me get a job
 				<input type="image" src="Cloth.png" />
 			</form>
 		</div>
+		<h1>Resume</h1>
+		<div class="align">
+			<iframe src="https://resume.creddle.io/embed/hzxu8pdb5nv"
+  width="850" height="1100" seamless></iframe>
+		</div>
 	</body>
  </html>
